--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://chris-kherk.github.io/Apx-Pharma-12/">https://chris-kherk.github.io/Apx-Pharma-12/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Apx+Pharma/Apx+Pharma-12/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Apx+Pharma/Apx+Pharma-12/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Apx+Pharma/Apx+Pharma-12/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Apx+Pharma/Apx+Pharma-12/index.html</a><br>
+                <a target="_bLank" href="https://thunderous-kelpie-04ef57.netlify.app">https://thunderous-kelpie-04ef57.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
